Spotify -> Apple Music

--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
 </a>
 <span id="thisyear">1992</span>
 
-    | <a href="https://open.spotify.com/user/tv1czk8r5ar01xar2mvucmj29?si=046807e7b9ad49ce">Friendship</a>
+    | <a href="https://music.apple.com/profile/simonemargio">Friendship</a>
 
 </p>
 </footer>
