--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="span9 bs-docs-sidebar">
         <p class="lead">Welcome to the future of the past!</p>
         <p></p>
-        <p>Retro aesthetic is a collection of collaborative playlists on Spotify that take you back in time. You can ask for friendship below and start collaborating to improve playlists.</p>
+        <p>Retro aesthetic is a collection of Apple Music playlists that take you back in time. If you want, u can ask for friendship below and start collaborating to improve playlists.</p>
         <p></p>
         <hr class="soften">
         <p></p>
@@ -123,7 +123,7 @@
 </a>
 <span id="thisyear">1992</span>
 
-    | <a href="https://open.spotify.com/user/tv1czk8r5ar01xar2mvucmj29?si=046807e7b9ad49ce">Friendship</a>
+    | <a href="https://music.apple.com/profile/simonemargio">Friendship</a>
 
 </p>
 </footer>
